Update 2a. Vocal responses - acoustic analyses.md

--- a/2a. Vocal responses - acoustic analyses.md
+++ b/2a. Vocal responses - acoustic analyses.md
@@ -67,7 +67,7 @@ dm2 <- dm %>%
 For details see:
 Mundry, R., & Sommer, C. (2007). Discriminant function analysis with nonindependent data: consequences and an alternative. Animal Behaviour, 74(4), 965-976.
 
-### Discrimination between shrills and hoos
+### Analysis 'shrills' vs 'hoos'
 
 <details>
   <summary>Click to expand code</summary>
@@ -165,3 +165,213 @@ print(variance_df)
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/pca_shrill_hoo_x.jpeg" alt="pca_sh" width="400"/>
 
+### Analyses 'shrills' and 'hoos' vs predator type
+#### Shrills
+<details>
+  <summary>Click to expand code</summary>
+
+```r
+# Subset with only shrills
+shrill_pdfa <- dm %>% 
+  subset(quality == 1 & unit_type == "shrill")
+
+# Sample sizes
+shrill_pdfa %>% 
+  group_by(context_experiment) %>% 
+  summarise(n_unit=n(), n_individual = n_distinct(id))
+
+ context_experiment n_unit n_individual
+  <chr>               <int>        <int>
+1 eagle                  69            7
+2 leopard               167            8
+3 viper                 112            8
+
+#run PDFA
+pdfa.res.s <- pDFA.incomplete(test.fac = "context_experiment", 
+                              contr.fac = "id", 
+                              variables = c("avg_entropy_bits", "center_time_rel", "peak_time_relative", "delta_time_s",
+                                            "time_25_rel", "time_75_rel", "time_95_rel", "pfc_avg_slope_hzms", "peak_freq_hz"), # remove "time_5_rel" because constant within groups
+                              balance.contr.fac.contrib = "mode",
+                              n.sel = 100, 
+                              n.perm = 1000, 
+                              pdfa.data = shrill_pdfa)
+
+pdfa.res.s<-data.frame(pdfa.res.s)
+
+# Results
+pdfa.res.s
+
+                                                             pdfa.res.s
+no.corr.classified.selected                                        4.14
+expected.no.corr.classified.selected                   3.91091091091091
+percent.correctly.classified.selected                                69
+expected.percent.correctly.classified.selected         65.1818485151819
+P.for.selected                                                    0.267
+no.corr.cross.classified                                         134.37
+expected.no.corr.cross.classified                      119.161161161161
+percent.corr.cross.classified                          39.2894736842105
+expected.percent.corr.cross.classified                 34.8424447839652
+P.for.cross.classified                                            0.262
+no.levels.contr.factor                                               16
+no.levels.test.factor                                                 3
+no.cases                                                            348
+no.cases.selected                                                     6
+number.cases.selected.per.combin.of.test.and.contr.fac                1
+no.permutations                                                    1000
+no.random.selections                                                100
+balance.contr.fac.contrib                                          mode
+
+ ```
+
+</details>
+
+
+#### Hoos
+
+<details>
+  <summary>Click to expand code</summary>
+
+```r
+# Subset hoos (without viper because only 6 calls)
+hoo_pdfa <- dm %>% 
+  subset(quality == 1 & unit_type == "hoo" & context_experiment != "viper") 
+
+# Sample sizes
+hoo_pdfa %>% 
+  group_by(context_experiment) %>% 
+  summarise(n_unit=n(), n_individual = n_distinct(id))
+
+  context_experiment n_unit n_individual
+  <chr>               <int>        <int>
+1 eagle                  17            6
+2 leopard                45            8
+
+#run PDFA
+pdfa.res.h <- pDFA.incomplete(test.fac = "context_experiment", 
+                              contr.fac = "id", 
+                              variables = c("avg_entropy_bits", "center_time_rel", "peak_time_relative", "delta_time_s",
+                                            "time_25_rel", "time_5_rel", "time_75_rel", "time_95_rel", "pfc_avg_slope_hzms", "peak_freq_hz"),
+                              balance.contr.fac.contrib = "mode",
+                              n.sel = 100, 
+                              n.perm = 1000, 
+                              pdfa.data = hoo_pdfa)
+
+pdfa.res.h<-data.frame(pdfa.res.h)
+
+# Results
+pdfa.res.h
+
+                                                            pdfa.res.h
+no.corr.classified.selected                                        6.91
+expected.no.corr.classified.selected                   7.19419419419419
+percent.correctly.classified.selected                            86.375
+expected.percent.correctly.classified.selected         89.9274274274274
+P.for.selected                                                    0.774
+no.corr.cross.classified                                          25.01
+expected.no.corr.cross.classified                      29.4634634634635
+percent.corr.cross.classified                          46.3148148148148
+expected.percent.corr.cross.classified                 54.5619693767842
+P.for.cross.classified                                            0.759
+no.levels.contr.factor                                               10
+no.levels.test.factor                                                 2
+no.cases                                                             62
+no.cases.selected                                                     8
+number.cases.selected.per.combin.of.test.and.contr.fac                1
+no.permutations                                                    1000
+no.random.selections                                                100
+balance.contr.fac.contrib                                          mode
+
+ ```
+
+</details>
+
+
+##### PCAs for visualisation 
+
+<details>
+  <summary>Click to expand code</summary>
+  
+  ```r
+### Shrills ###
+# PCA on the selected variables
+pca.res.s <- prcomp(shrill_pdfa[, c("avg_entropy_bits", "center_time_rel", "peak_time_relative", "delta_time_s",
+                               "time_25_rel", "time_75_rel", "time_95_rel", "pfc_avg_slope_hzms", "peak_freq_hz")], 
+                  scale. = TRUE)
+
+# Create a dataframe for plotting
+pca.df.s <- data.frame(pca.res.s$x, context_experiment = shrill_pdfa$context_experiment)
+
+# Plot the first two principal components
+ggplot(pca.df.s, aes(x = PC1, y = PC2, color = context_experiment)) +
+  geom_point(size = 3) +
+  labs(x = "PC1",
+       y = "PC2",
+       color = "Condition") +
+  theme_minimal() +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D"))
+
+
+# Calculate the proportion of variance explained by each principal component
+variance_explained_s <- (pca.res.s$sdev^2) / sum(pca.res.s$sdev^2)
+
+# Create a dataframe to show the variance explained by each PC
+variance_df_s <- data.frame(PC = paste0("PC", 1:length(variance_explained_s)),
+                          Variance_Explained = variance_explained_s)
+
+# Print the proportion of variance explained
+print(variance_df_s)
+
+
+### Hoos ###
+# Create subset with hoo in viper context for visualisation
+hoo_pca <- dm %>% 
+  subset(quality == 1 & unit_type == "hoo") 
+
+# PCA on the selected variables
+pca.res.h <- prcomp(hoo_pca[, c("avg_entropy_bits", "center_time_rel", "peak_time_relative", "delta_time_s",
+                                    "time_25_rel", "time_5_rel", "time_75_rel", "time_95_rel", "pfc_avg_slope_hzms", "peak_freq_hz")], 
+                    scale. = TRUE)
+
+# Create a dataframe for plotting
+pca.df.h <- data.frame(pca.res.h$x, context_experiment = hoo_pca$context_experiment)
+
+# Plot the first two principal components
+ggplot(pca.df.h, aes(x = PC1, y = PC2, color = context_experiment)) +
+  geom_point(size = 3) +
+  labs(x = "PC1",
+       y = "PC2",
+       color = "Condition") +
+  theme_minimal() +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D"))
+
+
+# Calculate the proportion of variance explained by each principal component
+variance_explained_h <- (pca.res.h$sdev^2) / sum(pca.res.h$sdev^2)
+
+# Create a dataframe to show the variance explained by each PC
+variance_df_h <- data.frame(PC = paste0("PC", 1:length(variance_explained_h)),
+                            Variance_Explained = variance_explained_h)
+
+# Print the proportion of variance explained
+print(variance_df_h)
+
+ ```
+
+</details>
+
+#### Results 'shrills'
+
+Eagle: N = 69 ‘shrills’ from N = 7 individuals; 
+Leopard: N = 167 ‘shrills’ from N = 8 individuals; 
+Viper: N = 112 ‘shrills’ from N = 8 individuals; 
+p > 0.05, correctly cross-classified = 39%, expected = 35%
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/pca_shrill_context.jpeg" alt="pca_s_c" width="400"/>
+
+#### Results 'hoos'
+
+Eagle: N = 17 ‘hoos’ from N = 6 individuals; 
+Leopard: N = 45 ‘hoos from N = 8 individuals; 
+p > 0.05, correctly cross-classified = 46%, expected = 55%
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/pca_hoo_context.jpeg" alt="pca_h_c" width="400"/>
