--- a/2c. Vocal responses - utterance types and number.md
+++ b/2c. Vocal responses - utterance types and number.md
@@ -9,7 +9,9 @@ Details on dataset processing.
   <summary>Click to expand code</summary>
   
 ```r
-# Dataset
+# Datasets
+
+## To calculte utterance type and number of utterances
 # select the datafile "mangabey call wide" 
 csvFile <- file.choose()
 
@@ -34,6 +36,29 @@ ggplot(dm_v, aes(x = begin_time_s_calibrated, y = as.factor(exp_id), color = as.
   labs(x = "Time (s)", y = "", color = "Utterance type") +
   theme_minimal() +
   facet_grid(context_experiment ~ ., scales = "free_y", space = "free_y")  # Stacks facets vertically
+
+## To calculate 'shrill' delivery rate
+# select the datafile "mangabey call acoustic"
+csvFile <- file.choose()
+
+dm  = read.csv(csvFile, header=T)
+
+# Create subset with only shrill calls of good acoustic quality and calculate rate of delivery
+shrill_del <- dm %>%
+  subset(unit_type == "shrill") %>% 
+  group_by(call_id) %>%
+  filter(all(quality == 1)) %>%  # Keep only call_ids where all rows have quality = 1
+  summarise(
+    n_ele = n(),                # Count the number of elements for each call
+    total_interval = sum(unit_interval)  # Sum the unit intervals for each call
+  ) %>%
+  mutate(rate_of_delivery = n_ele / total_interval)  # Calculate the rate of delivery (elements per time)
+
+# Bring relevant variables from dm
+shrill_del <- merge(shrill_del, dm[, c("call_id", "context_experiment", "id", "sex", "ageclass", "group", "exp_id")], by = "call_id", all.x = TRUE)
+
+# Only keep one row per call
+shrill_del <- shrill_del %>% distinct(call_id, .keep_all = TRUE)
 
  ```
 </details>
@@ -255,8 +280,66 @@ First number below predator type corresponds to the number of vocal utterances, 
 
 In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.97, 95%-CI[0.65–1] and for 'shrill_hoo' = 0.03, 95%-CI[0.0004–0.35]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' did not show a significant difference in the probability of their production (leopard: mean posterior distribution for 'shrill' = 0.25, 95%-CI[0.02–0.85] and for 'shrill_hoo' = 0.75, 95%-CI[0.15–0.98]; eagle: mean posterior distribution for 'shrill' = 0.34, 95%-CI[0.05–0.80] and for 'shrill_hoo' = 0.66, 95%-CI[0.20–0.95].         
 
+## 2. Analyse rate of 'shrills' delivery vs predator type 
+```r
+m_rate <- brm(
+  formula = rate_of_delivery ~ context_experiment,
+  data = shrill_del,
+  family = lognormal(),  
+  chains = 4,
+  iter = 2000)
+```
+### Model summary
 
-## 2. Analyse number of vocal utterances vs predator type 
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Summary
+summary(m_rate)
+Family: lognormal 
+  Links: mu = identity; sigma = identity 
+Formula: rate_of_delivery ~ context_experiment 
+   Data: shrill_del (Number of observations: 84) 
+  Draws: 4 chains, each with iter = 2000; warmup = 1000; thin = 1;
+         total post-warmup draws = 4000
+
+Regression Coefficients:
+                          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                    -0.08      0.21    -0.50     0.33 1.00     3060     2678
+context_experimentleopard     0.21      0.25    -0.27     0.71 1.00     3132     2936
+context_experimentviper      -0.57      0.30    -1.12     0.02 1.00     3272     2602
+
+Further Distributional Parameters:
+      Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sigma     0.88      0.07     0.76     1.04 1.00     3429     2792
+
+Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
+and Tail_ESS are effective sample size measures, and Rhat is the potential
+scale reduction factor on split chains (at convergence, Rhat = 1).
+
+# Inspect model
+pp_check(m_rate, ndraws = 100)
+ ```
+
+</details>
+
+#### Posterior predictive check
+<details>
+  <summary>Click to expand code</summary>
+  
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_rate_pp.jpeg" alt="shrill_rate_pp" width="400"/>
+
+</details> 
+
+### Post hoc comparisons
+```r
+
+# Post hoc comparison 
+emm_d <- pairs(emmeans(m_rate, ~ context_experiment))
+print(emm_d)
+
+## 3. Analyse number of vocal utterances vs predator type 
 
 ```r
 # Data
