--- a/2c. Vocal responses - utterance types and number.md
+++ b/2c. Vocal responses - utterance types and number.md
@@ -37,28 +37,11 @@ ggplot(dm_v, aes(x = begin_time_s_calibrated, y = as.factor(exp_id), color = as.
   theme_minimal() +
   facet_grid(context_experiment ~ ., scales = "free_y", space = "free_y")  # Stacks facets vertically
 
-## To calculate 'shrill' delivery rate
+## To calculate 'shrill' elements number and intervals per utterance
 # select the datafile "mangabey call acoustic"
 csvFile <- file.choose()
 
 dm  = read.csv(csvFile, header=T)
-
-# Create subset with only shrill calls of good acoustic quality and calculate rate of delivery
-shrill_del <- dm %>%
-  subset(unit_type == "shrill") %>% 
-  group_by(call_id) %>%
-  filter(all(quality == 1)) %>%  # Keep only call_ids where all rows have quality = 1
-  summarise(
-    n_ele = n(),                # Count the number of elements for each call
-    total_interval = sum(unit_interval)  # Sum the unit intervals for each call
-  ) %>%
-  mutate(rate_of_delivery = n_ele / total_interval)  # Calculate the rate of delivery (elements per time)
-
-# Bring relevant variables from dm
-shrill_del <- merge(shrill_del, dm[, c("call_id", "context_experiment", "id", "sex", "ageclass", "group", "exp_id")], by = "call_id", all.x = TRUE)
-
-# Only keep one row per call
-shrill_del <- shrill_del %>% distinct(call_id, .keep_all = TRUE)
 
  ```
 </details>
@@ -280,14 +263,25 @@ First number below predator type corresponds to the number of vocal utterances, 
 
 In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.97, 95%-CI[0.65–1] and for 'shrill_hoo' = 0.03, 95%-CI[0.0004–0.35]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' did not show a significant difference in the probability of their production (leopard: mean posterior distribution for 'shrill' = 0.25, 95%-CI[0.02–0.85] and for 'shrill_hoo' = 0.75, 95%-CI[0.15–0.98]; eagle: mean posterior distribution for 'shrill' = 0.34, 95%-CI[0.05–0.80] and for 'shrill_hoo' = 0.66, 95%-CI[0.20–0.95].         
 
-## 2. Analyse rate of 'shrills' delivery vs predator type 
+## 2. Analyse number of 'shrill' elements vs predator type
 ```r
-m_rate <- brm(
-  formula = rate_of_delivery ~ context_experiment,
-  data = shrill_del,
-  family = lognormal(),  
-  chains = 4,
-  iter = 2000)
+# Prepare data 
+ele_nb <- dm %>%
+  subset(unit_type == "shrill") %>% 
+  group_by(utt_id) %>%
+  summarise(n_ele = n())
+
+ele_nb <- merge(ele_nb, dm[, c("context_experiment", "id", "sex", "ageclass", "group", "exp_id", "utt_id")], by = "utt_id", all.x = TRUE)
+
+ele_nb <- ele_nb %>% distinct(utt_id, .keep_all = TRUE)
+
+# Model 
+m_total_e <- brm(
+  formula = n_ele ~ context_experiment,
+  family = negbinomial(),
+  data = ele_nb,
+  iter = 4000,
+  chains = 4)
 ```
 ### Model summary
 
@@ -296,30 +290,30 @@ m_rate <- brm(
   
 ```r
 # Summary
-summary(m_rate)
-Family: lognormal 
-  Links: mu = identity; sigma = identity 
-Formula: rate_of_delivery ~ context_experiment 
-   Data: shrill_del (Number of observations: 84) 
-  Draws: 4 chains, each with iter = 2000; warmup = 1000; thin = 1;
-         total post-warmup draws = 4000
+summary(m_total_e)
+ Family: negbinomial 
+  Links: mu = log; shape = identity 
+Formula: n_ele ~ context_experiment 
+   Data: ele_nb (Number of observations: 97) 
+  Draws: 4 chains, each with iter = 4000; warmup = 2000; thin = 1;
+         total post-warmup draws = 8000
 
 Regression Coefficients:
                           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                    -0.08      0.21    -0.50     0.33 1.00     3060     2678
-context_experimentleopard     0.21      0.25    -0.27     0.71 1.00     3132     2936
-context_experimentviper      -0.57      0.30    -1.12     0.02 1.00     3272     2602
+Intercept                     1.14      0.15     0.83     1.44 1.00     5620     4481
+context_experimentleopard     0.11      0.19    -0.26     0.48 1.00     6061     5781
+context_experimentviper       0.32      0.20    -0.07     0.71 1.00     5860     5203
 
 Further Distributional Parameters:
       Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sigma     0.88      0.07     0.76     1.04 1.00     3429     2792
+shape     5.57      1.94     3.00    10.35 1.00     6883     4722
 
 Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
 and Tail_ESS are effective sample size measures, and Rhat is the potential
 scale reduction factor on split chains (at convergence, Rhat = 1).
 
 # Inspect model
-pp_check(m_rate, ndraws = 100)
+pp_check(m_total_e, ndraws = 100)
  ```
 
 </details>
@@ -328,7 +322,7 @@ pp_check(m_rate, ndraws = 100)
 <details>
   <summary>Click to expand code</summary>
   
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_rate_pp.jpeg" alt="shrill_rate_pp" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_nb_pp.jpeg" alt="shrill_nb_pp" width="400"/>
 
 </details> 
 
@@ -336,9 +330,80 @@ pp_check(m_rate, ndraws = 100)
 ```r
 
 # Post hoc comparison 
-emm_d <- pairs(emmeans(m_rate, ~ context_experiment))
-print(emm_d)
+emm_t <- pairs(emmeans(m_total_e, ~ context_experiment))
+print(emm_t)
+ print(emm_t)
+ contrast        estimate lower.HPD upper.HPD
+ eagle - leopard   -0.103    -0.478    0.2499
+ eagle - viper     -0.320    -0.708    0.0683
+ leopard - viper   -0.212    -0.553    0.0956
+
+Point estimate displayed: median 
+Results are given on the log (not the response) scale. 
+HPD interval probability: 0.95 
  ```
+### Extract posterior mean and CI
+
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Extract conditional effects
+ce_m_total_ele <- conditional_effects(m_total_e)
+
+# Calculate the mean for the 'estimate__' column 
+mean_total_ele <- sapply(ce_m_total_ele$context_experiment$estimate__, mean)
+
+# Extract the 'context_experiment' 
+ce_m_total_ele$context_experiment
+
+# Extract data frame for further examination
+results_total_ele <- ce_m_total_ele$context_experiment
+
+# Create the results table by extracting relevant columns
+total_ele_results <- data.frame(
+  condition = results_total_ele$context_experiment,  # Conditions
+  mean = results_total_ele$estimate__,              # Mean estimates
+  lower_CI = results_total_ele$lower__,             # Lower CI estimates
+  upper_CI = results_total_ele$upper__              # Upper CI estimates
+)
+
+# Print the results table
+print(total_ele_results)
+
+# Custom labels for x-axis, e.g., sample size
+custom_labels_ele <- c("Eagle\n22\n7", "Leopard\n48\n8", "Viper\n27\n8")
+
+# Plot
+ggplot() +
+  # Raw data points with jitter for visibility
+  geom_point(data = ele_nb, aes(x = context_experiment, y = n_ele, color = context_experiment),
+             position = position_jitter(width = 0.2), alpha = 0.6, size = 1.5) +
+  # Mean points for each condition
+  geom_point(data = total_ele_results, aes(x = condition, y = mean, color = condition), size = 4) +
+  # Error bars without whiskers
+  geom_linerange(data = total_ele_results, aes(x = condition, ymin = lower_CI, ymax = upper_CI, color = condition), size = 1) +
+  # Labels and theme
+  labs(x = NULL, y = "N 'shrill' element per utterance") +
+  theme_minimal() +
+  theme( panel.grid.major = element_blank(),  # Remove major grid lines
+         panel.grid.minor = element_blank(),  # Remove minor grid lines
+         text = element_text(size = 14),      # General text size
+         axis.text = element_text(size = 12), # Axis text size
+         axis.line = element_line(size = 0.5, color = "black")) +         
+  scale_x_discrete(labels = custom_labels_ele) +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D"))  + # Custom colours
+  guides(color = "none")  # Remove legend
+```
+</details> 
+
+#### Figure. Number of 'shrill' element per utterance depending on predator type   
+The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
+First number below predator type corresponds to the number of of vocal utterances recorded, and the number below is the number of trials (one caller per trial).
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_nb_plot.jpeg" alt="shrill_nb_plot" width="400"/>
+
+Sooty mangabey produced vocal utterances containing a similar number of 'shrill' elements across conditions: eagle mean posterior distribution = 3.12, 95%-CI[2.30–4.20]; leopard mean posterior distribution = 3.49, 95%-CI[2.84–4.24]; viper mean posterior distribution = 4.31, 95%-CI[3.35–5.52]. The pairwise post-hoc comparisons confirmed this: leopard vs eagle posterior median log odds ratio = -0.10, 95%-CI[-0.48–0.25]; leopard vs viper = -0.12, 95%-CI[-0.55–0.10]; eagle vs viper posterior median log odds ratio = -0.32, 95%-CI[-0.71–0.07]. 
 
 ## 3. Analyse number of vocal utterances vs predator type 
 
