Update 2c. Vocal responses - utterance types and number.md

--- a/2c. Vocal responses - utterance types and number.md
+++ b/2c. Vocal responses - utterance types and number.md
@@ -405,7 +405,140 @@ First number below predator type corresponds to the number of of vocal utterance
 
 Sooty mangabey produced vocal utterances containing a similar number of 'shrill' elements across conditions: eagle mean posterior distribution = 3.12, 95%-CI[2.30–4.20]; leopard mean posterior distribution = 3.49, 95%-CI[2.84–4.24]; viper mean posterior distribution = 4.31, 95%-CI[3.35–5.52]. The pairwise post-hoc comparisons confirmed this: leopard vs eagle posterior median log odds ratio = -0.10, 95%-CI[-0.48–0.25]; leopard vs viper = -0.12, 95%-CI[-0.55–0.10]; eagle vs viper posterior median log odds ratio = -0.32, 95%-CI[-0.71–0.07]. 
 
-## 3. Analyse number of vocal utterances vs predator type 
+## 3. Analyse intervals (s) between 'shrill' elements vs predator type
+```r
+# Prepare data 
+utt_int <- dm %>% 
+  subset(unit_rank != 1 & unit_type == "shrill")
+
+# Round intervals to use poisson distribution as other (Gamma, lognormal) didn't work
+utt_int$unit_interval_rounded <- round(utt_int$unit_interval)
+
+# Model
+m_inter_p <- brm(
+  formula = unit_interval_rounded ~ context_experiment,
+  data = utt_int,
+  family = poisson(),
+  chains = 4,
+  iter = 2000)
+
+```
+### Model summary
+
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Summary
+summary(m_inter_p)
+ Family: poisson 
+  Links: mu = log 
+Formula: unit_interval_rounded ~ context_experiment 
+   Data: utt_int (Number of observations: 244) 
+  Draws: 4 chains, each with iter = 2000; warmup = 1000; thin = 1;
+         total post-warmup draws = 4000
+
+Regression Coefficients:
+                          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                    -2.87      0.65    -4.29    -1.77 1.00     1394     1286
+context_experimentleopard    -0.35      0.80    -1.88     1.31 1.00     1595     1585
+context_experimentviper       1.65      0.68     0.47     3.13 1.00     1478     1314
+
+Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
+and Tail_ESS are effective sample size measures, and Rhat is the potential
+scale reduction factor on split chains (at convergence, Rhat = 1).
+
+pp_check(m_inter_p, ndraws = 100)
+ ```
+
+</details>
+
+#### Posterior predictive check
+<details>
+  <summary>Click to expand code</summary>
+  
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_int_pp.jpeg" alt="shrill_int_pp" width="400"/>
+
+</details> 
+
+### Post hoc comparisons
+```r
+# Post hoc comparison 
+emm_p <- pairs(emmeans(m_inter_p, ~ context_experiment))
+print(emm_p)
+ contrast        estimate lower.HPD upper.HPD
+ eagle - leopard    0.349     -1.24     1.807
+ eagle - viper     -1.587     -2.85    -0.374
+ leopard - viper   -1.940     -3.03    -1.039
+
+Point estimate displayed: median 
+Results are given on the log (not the response) scale. 
+HPD interval probability: 0.95 
+ ```
+### Extract posterior mean and CI
+
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Extract conditional effects
+ce_m_inter <- conditional_effects(m_inter_p)
+
+# Calculate the mean for the 'estimate__' column 
+mean_inter <- sapply(ce_m_inter$context_experiment$estimate__, mean)
+
+# Extract the 'context_experiment' 
+ce_m_inter$context_experiment
+
+# Extract data frame for further examination
+results_inter <- ce_m_inter$context_experiment
+
+# Create the results table by extracting relevant columns
+inter_results <- data.frame(
+  condition = results_inter$context_experiment,  # Conditions
+  mean = results_inter$estimate__,              # Mean estimates
+  lower_CI = results_inter$lower__,             # Lower CI estimates
+  upper_CI = results_inter$upper__              # Upper CI estimates
+)
+
+# Print the results table
+print(inter_results)
+
+# Custom labels for x-axis, e.g., sample size
+custom_labels_int <- c("Eagle\n20\n6", "Leopard\n46\n8", "Viper\n24\n8")
+
+# Plot
+ggplot() +
+  # Raw data points with jitter for visibility
+  geom_point(data = utt_int, aes(x = context_experiment, y = unit_interval, color = context_experiment),
+             position = position_jitter(width = 0.4), alpha = 0.3, size = 1.5) +
+  # Mean points for each condition
+  geom_point(data = inter_results, aes(x = condition, y = mean, color = condition), size = 4) +
+  # Error bars without whiskers
+  geom_linerange(data = inter_results, aes(x = condition, ymin = lower_CI, ymax = upper_CI, color = condition), size = 1) +
+  # Labels and theme
+  labs(x = NULL, y = "Intervals (s) between 'shrill' elements") +
+  theme_minimal() +
+  theme( panel.grid.major = element_blank(),  # Remove major grid lines
+         panel.grid.minor = element_blank(),  # Remove minor grid lines
+         text = element_text(size = 14),      # General text size
+         axis.text = element_text(size = 12), # Axis text size
+         axis.line = element_line(size = 0.5, color = "black")) +         
+  scale_x_discrete(labels = custom_labels_int) +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D"))  + # Custom colours
+  guides(color = "none")  # Remove legend
+```
+</details> 
+
+#### Figure. Number of 'shrill' element per utterance depending on predator type   
+The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model (with intervals rounded) and the points represent the raw data (intervals not rounded).
+First number below predator type corresponds to the number of of vocal utterances recorded, and the number below is the number of trials (one caller per trial). 
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_int_plot.jpeg" alt="shrill_int_plot" width="400"/>
+
+In soooty mangabey vocal utterances, intervals between 'shrill' elements were larger in the viper condition compared to eagle and leopard conditions viper mean posterior distribution = 0.30, 95%-CI[0.20–0.43]; eagle mean posterior distribution = 0.06, 95%-CI[0.01–0.16]; leopard mean posterior distribution = 0.04, 95%-CI[0.02–0.10]. This was confirmed with the pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = -1.59, 95%-CI[-2.85–-0.37]; viper vs leopard posterior median log odds ratio = -1.94, 95%-CI[-3.03–-1.04]. However, post-hoc comparisons of the eagle and leopard conditions did not show differences: posterior median log odds ratio = 0.35, 95%-CI[-1.24–1.81].
+
+## 4. Analyse number of vocal utterances vs predator type 
 
 ```r
 # Data
