Update 2c. Vocal responses - utterance types and number.md

--- a/2c. Vocal responses - utterance types and number.md
+++ b/2c. Vocal responses - utterance types and number.md
@@ -403,7 +403,7 @@ First number below predator type corresponds to the number of of vocal utterance
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_nb_plot.jpeg" alt="shrill_nb_plot" width="400"/>
 
-Sooty mangabey produced vocal utterances containing a similar number of 'shrill' elements across conditions: eagle mean posterior distribution = 3.12, 95%-CI[2.30–4.20]; leopard mean posterior distribution = 3.49, 95%-CI[2.84–4.24]; viper mean posterior distribution = 4.31, 95%-CI[3.35–5.52]. The pairwise post-hoc comparisons confirmed this: leopard vs eagle posterior median log odds ratio = -0.10, 95%-CI[-0.48–0.25]; leopard vs viper = -0.12, 95%-CI[-0.55–0.10]; eagle vs viper posterior median log odds ratio = -0.32, 95%-CI[-0.71–0.07]. 
+Sooty mangabeys produced vocal utterances containing a similar number of 'shrill' elements across conditions: eagle mean posterior distribution = 3.12, 95%-CI[2.30–4.20]; leopard mean posterior distribution = 3.49, 95%-CI[2.84–4.24]; viper mean posterior distribution = 4.31, 95%-CI[3.35–5.52]. The pairwise post-hoc comparisons confirmed this: leopard vs eagle posterior median log odds ratio = -0.10, 95%-CI[-0.48–0.25]; leopard vs viper = -0.12, 95%-CI[-0.55–0.10]; eagle vs viper posterior median log odds ratio = -0.32, 95%-CI[-0.71–0.07]. 
 
 ## 3. Analyse intervals (s) between 'shrill' elements vs predator type
 ```r
@@ -536,7 +536,7 @@ First number below predator type corresponds to the number of of vocal utterance
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/shrill_int_plot.jpeg" alt="shrill_int_plot" width="400"/>
 
-In soooty mangabey vocal utterances, intervals between 'shrill' elements were larger in the viper condition compared to eagle and leopard conditions viper mean posterior distribution = 0.30, 95%-CI[0.20–0.43]; eagle mean posterior distribution = 0.06, 95%-CI[0.01–0.16]; leopard mean posterior distribution = 0.04, 95%-CI[0.02–0.10]. This was confirmed with the pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = -1.59, 95%-CI[-2.85–-0.37]; viper vs leopard posterior median log odds ratio = -1.94, 95%-CI[-3.03–-1.04]. However, post-hoc comparisons of the eagle and leopard conditions did not show differences: posterior median log odds ratio = 0.35, 95%-CI[-1.24–1.81].
+In sooty mangabey vocal utterances, intervals between 'shrill' elements were larger in the viper condition compared to eagle and leopard conditions viper mean posterior distribution = 0.30, 95%-CI[0.20–0.43]; eagle mean posterior distribution = 0.06, 95%-CI[0.01–0.16]; leopard mean posterior distribution = 0.04, 95%-CI[0.02–0.10]. This was confirmed with the pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = -1.59, 95%-CI[-2.85–-0.37]; viper vs leopard posterior median log odds ratio = -1.94, 95%-CI[-3.03–-1.04]. However, post-hoc comparisons of the eagle and leopard conditions did not show differences: posterior median log odds ratio = 0.35, 95%-CI[-1.24–1.81].
 
 ## 4. Analyse number of vocal utterances vs predator type 
 
