Update 3. Vocal responses - utterance composition.md

--- a/3. Vocal responses - utterance composition.md
+++ b/3. Vocal responses - utterance composition.md
@@ -46,11 +46,11 @@ dm  = read.csv(csvFile, header=T)
  ```
 </details>
 
-## 1. Sample size 
+## Sample size 
 #### Figure. Vocal utterance produced during the first 30s after the start of first vocalisation
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/all_utt.jpeg" alt="voc" width="600"/>
 
-## 2. Analyse vocal utterance type vs predator type 
+## 1. Analyse vocal utterance type vs predator type 
 
 We controlled for variability between experimental trials as a random effect, since the number of observations for each call type varied significantly across trials. This ensures that any observed effects of the context on call type probability are not confounded by differences in the number of calls. We did not control for the identity of individuals as a random effect because the number of observations per individual was highly variable, with some individuals contributing only one or two observations. This uneven sampling could have led to unstable estimates for individual-level random effects, so we opted to exclude id to avoid potential model instability and ensure reliable estimates. 
 
